force-app/main/default/objects/Access_Request__c/Access_Request__c.object-meta.xml
<CustomObject>
    <label>Access Request</label>
    <nameField>
        <displayFormat>ACC-{000}</displayFormat>
        <label>Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>