force-app/main/default/objects/Access_Request__c/fields/Provisioned_Date__c.field-meta.xml
<CustomField>
    <fullName>Provisioned_Date__c</fullName>
    <label>Provisioned Date</label>
    <type>Date</type>
</CustomField>