force-app/main/default/objects/Access_Request__c/fields/System_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Name__c</fullName>
    <label>System Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email/Office 365</fullName>
            </value>
            <value>
                <fullName>Marketing Automation</fullName>
            </value>
            <value>
                <fullName>GitHub</fullName>
            </value>
            <value>
                <fullName>Sales Navigator</fullName>
            </value>
            <value>
                <fullName>Docker Hub</fullName>
            </value>
            <value>
                <fullName>ZoomInfo</fullName>
            </value>
            <value>
                <fullName>Salesforce CRM</fullName>
            </value>
            <value>
                <fullName>VPN Access</fullName>
            </value>
            <value>
                <fullName>AWS Console</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>