force-app/main/default/objects/Access_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>System_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Date__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Provisioned_Date__c</columns>
    <columns>Access_Level__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>